Modiifed yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: node_js
 node_js:
   - "stable"
+
+before_install:
+ - ls -la
+ -npm install
+ -mkdir public
+ -ls -la
+
+
+
 deploy:
   provider: pages
   skip_cleanup: true
